updatig file location for github live page

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div id="card">
         <div id="cardImage"> <!---left hand image on sign in card--->
             <div class="overlay">
-                <img src="/Users/jamie/repos/Odin_projects/sign-up_form/images/odin-lined.png" alt="Odin Logo"
+                <img src="images/odin-lined.png" alt="Odin Logo"
                     id="logo">
                 <span id="odinText">Odin</span>
             </div>
